Refactor namespace Added interaction between players. Swords hit, and sound, but no health logic. Oliver will love fighting in creative mode though :-)

--- a/src/MiNET/MiNET.Network/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET.Network/Net/MCPE Protocol.tt
@@ -14,10 +14,10 @@ doc.Load(path + @"\MCPE Protocol.xml");
 // WARNING: T4 GENERATED CODE - DO NOT EDIT
 // 
 
-using MiNET.Network.Utils; 
-using little = MiNET.Network.Utils.Int24; // friendly name
+using MiNET.Utils; 
+using little = MiNET.Utils.Int24; // friendly name
 
-namespace MiNET.Network.Net
+namespace MiNET.Net
 {
 
 	public class PackageFactory
