--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -34,7 +34,8 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 {
 #>
 				case <#= pdu.Attributes["id"].Value #>:
-					package = new <#= CodeTypeName(pdu.Attributes["name"].Value) #>();
+					package = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
+					package.Timer.Start();
 					package.Decode(buffer);
 					return package;
 <#	
