Just lots and lots of stuff.

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -15,6 +15,7 @@ doc.Load(path + @"\MCPE Protocol.xml");
 // 
 
 using System;
+using System.Net;
 using System.Threading;
 using MiNET.Utils; 
 using little = MiNET.Utils.Int24; // friendly name
