Refactor packet handling. Just a first drop to allow plugins to update naming before changing functionality.

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -26,6 +26,18 @@ using LongString = System.String;
 
 namespace MiNET.Net
 {
+	public interface IMcpeMessageHandler
+	{
+<#	
+
+foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and @client='true']"))
+{
+#>
+		void Handle<#= CodeTypeName(pdu.Attributes["name"].Value) #>(<#= CodeTypeName(pdu.Attributes["name"].Value) #> message);
+<#	
+} // foreach
+#>
+	}
 
 	public class PackageFactory
 	{
