Fully migrate to GetBuffer() usage to reduce memory usage

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -141,7 +141,14 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 	{
 		if(field.NodeType != XmlNodeType.Element) continue;
 
-		WriteLine(string.Format("\t\t\tWrite({0});", CodeName(field.Attributes["name"].Value)));
+		if (CodeName(field.Attributes["name"].Value) == "payload" && CodeTypeName(pdu.Attributes["name"].Value) == "McpeBatch")
+		{
+				WriteLine(string.Format("\t\t\tWrite({0}, payloadSize);", CodeName(field.Attributes["name"].Value)));
+		}
+		else
+		{
+				WriteLine(string.Format("\t\t\tWrite({0});", CodeName(field.Attributes["name"].Value)));
+		}
 
 			
 	} // foreach
