--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -3,13 +3,37 @@
 <#@ assembly name="System.Xml"#>
 <#@ import namespace="System.Xml" #>
 <#@ import namespace="System.Collections.Generic" #>
-
 <#
 string path = this.Host.ResolvePath("");
 XmlDocument doc = new XmlDocument();
 doc.Load(path + @"\MCPE Protocol.xml");
 
 #>
+#region LICENSE
+
+// The contents of this file are subject to the Common Public Attribution
+// License Version 1.0. (the "License"); you may not use this file except in
+// compliance with the License. You may obtain a copy of the License at
+// https://github.com/NiclasOlofsson/MiNET/blob/master/LICENSE. 
+// The License is based on the Mozilla Public License Version 1.1, but Sections 14 
+// and 15 have been added to cover use of software over a computer network and 
+// provide for limited attribution for the Original Developer. In addition, Exhibit A has 
+// been modified to be consistent with Exhibit B.
+// 
+// Software distributed under the License is distributed on an "AS IS" basis,
+// WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License for
+// the specific language governing rights and limitations under the License.
+// 
+// The Original Code is Niclas Olofsson.
+// 
+// The Original Developer is the Initial Developer.  The Initial Developer of
+// the Original Code is Niclas Olofsson.
+// 
+// All portions of the code written by Niclas Olofsson are Copyright (c) 2014-2017 Niclas Olofsson. 
+// All Rights Reserved.
+
+#endregion
+
 //
 // WARNING: T4 GENERATED CODE - DO NOT EDIT
 // 
@@ -28,7 +52,6 @@ namespace MiNET.Net
 {
 	public interface IMcpeMessageHandler
 	{
-
 		void Disconnect(string reason, bool sendDisconnect = true);
 
 <#	
@@ -47,7 +70,8 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and @cli
 		public static Package CreatePackage(byte messageId, byte[] buffer, string ns)
 		{
 			Package package = null; 
-			if(ns == "raknet") {
+			if(ns == "raknet") 
+			{
 				switch (messageId)
 				{
 <#	
@@ -57,14 +81,14 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[@namespace='raknet']"))
 #>
 					case <#= pdu.Attributes["id"].Value #>:
 						package = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
-						//package.Timer.Start();
 						package.Decode(buffer);
 						return package;
 <#	
 } // foreach
 #>
 				}
-			} else if(ns == "ftl") {
+			} else if(ns == "ftl") 
+			{
 				switch (messageId)
 				{
 <#	
@@ -73,7 +97,6 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[@namespace='ftl']"))
 #>
 					case <#= pdu.Attributes["id"].Value #>:
 						package = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
-						//package.Timer.Start();
 						package.Decode(buffer);
 						return package;
 <#	
@@ -85,13 +108,11 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[@namespace='ftl']"))
 				switch (messageId)
 				{
 <#	
-
 foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and not(@namespace='ftl')]"))
 {
 #>
 					case <#= pdu.Attributes["id"].Value #>:
 						package = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
-						//package.Timer.Start();
 						package.Decode(buffer);
 						return package;
 <#	
@@ -177,9 +198,11 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 	} // foreach
 
 #>
+
 		public <#= CodeTypeName(pdu.Attributes["name"].Value) #>()
 		{
 			Id = <#= CodeName(pdu.Attributes["id"].Value, true) #>;
+			IsMcpe = <#= ("mcpe" == (pdu.Attributes["namespace"]?.Value??"mcpe")).ToString().ToLower() #>;
 		}
 
 		protected override void EncodePackage()
@@ -309,7 +332,6 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 
 		partial void BeforeDecode();
 		partial void AfterDecode();
-
 	}
 
 <#
