--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -56,6 +56,7 @@ namespace MiNET.Net
 
 <#	
 
+
 foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and @client='true']"))
 {
 #>
@@ -135,6 +136,8 @@ foreach (XmlNode constant in doc.SelectNodes("//constant"))
 	constantsLoopup.Add(attributes["id"].Value, new Tuple<string, string>(attributes["type"].Value, attributes["value"].Value));
 }
 
+PrintConstants(doc.SelectNodes("/protocol/enums"));
+WriteLine("");
 
 foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 {
@@ -144,7 +147,12 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 	{
 <#	
 
-	foreach (XmlNode field in pdu.ChildNodes)
+	PushIndent("\t");
+	PrintConstants(pdu.SelectNodes("enums"));
+	WriteLine("");
+	PopIndent();
+
+	foreach (XmlNode field in pdu.SelectNodes("field"))
 	{
 		if(field.NodeType != XmlNodeType.Element) continue;
 
@@ -212,7 +220,7 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 			BeforeEncode();
 
 <#	
-	foreach (XmlNode field in pdu.ChildNodes)
+	foreach (XmlNode field in pdu.SelectNodes("field"))
 	{
 		if(field.NodeType != XmlNodeType.Element) continue;
 
@@ -280,7 +288,7 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu"))
 			BeforeDecode();
 
 <#	
-	foreach (XmlNode field in pdu.ChildNodes)
+	foreach (XmlNode field in pdu.SelectNodes("field"))
 	{
 		if(field.NodeType != XmlNodeType.Element) continue;
 
@@ -397,4 +405,29 @@ public string SafeToString(XmlNode node)
 
 	return node.Value;
 }
+
+private void PrintConstants(XmlNodeList nodes)
+{
+	PushIndent("\t");
+
+	foreach (XmlNode constants in nodes)
+	{
+		WriteLine($"public enum {CodeTypeName(constants.Attributes["id"]?.Value)}");
+		WriteLine($"{{");
+		PushIndent("\t");
+
+		foreach (XmlNode constant in constants.ChildNodes)
+		{
+			var attributes = constant.Attributes;
+			WriteLine($"{CodeTypeName(attributes["id"]?.Value)} = {attributes["value"].Value},");
+		}
+
+		PopIndent();
+		WriteLine($"}}");
+	}
+
+	PopIndent();
+
+}
+
 #>
